--- a/pyDF/pyproject.toml
+++ b/pyDF/pyproject.toml
@@ -8,7 +8,7 @@ requires-python = ">=3.8"
 dependencies = ["numpy >= 1.22"]
 
 [build-system]
-requires = ["maturin>=0.11,<0.12"]
+requires = ["maturin~=1.3"]
 build-backend = "maturin"
 
 [tool.maturin]
@@ -17,7 +17,7 @@ strip = true
 
 [tool.black]
 line-length = 100
-target-version = ["py38", "py39", "py310"]
+target-version = ["py38", "py39", "py310", "py311"]
 include = '\.pyi?$'
 
 [tool.isort]
