libdf/df: Add capi logging; export model epoch

--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -15,7 +15,7 @@ timings = ["deep_filter/timings"]
 hdf5-static = ["deep_filter/hdf5-static"]
 
 [dependencies]
-deep_filter = { features = ["dataset", "vorbis", "flac"], path = "../libDF" }
+deep_filter = { features = ["dataset", "logging", "vorbis", "flac"], path = "../libDF" }
 pyo3 = { version = "0.20", default_features = true, features = [
   "extension-module",
 ] }
