--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -50,7 +50,7 @@ dataset = [
   "dep:anyhow",
 ]
 timings = []
-logging = ["dep:log"]
+logging = ["dep:log", "dep:crossbeam-channel"]
 vorbis = ["dep:lewton", "dep:ogg"]
 flac = ["dep:claxon"]
 bin = [
@@ -78,18 +78,18 @@ tract = [
   "dep:flate2",
   "dep:tar",
 ]
-default-model = []  # Include default DFN3 model
-default-model-ll = []  # Include default DFN3 low latency model
+default-model = [] # Include default DFN3 model
+default-model-ll = [] # Include default DFN3 low latency model
 nightly-features = []
-capi = ["tract", "default-model", "dep:ndarray"]
+capi = ["tract", "default-model", "dep:ndarray", "logging"]
 wasm = [
-  "tract", 
-  "default-model", 
-  "dep:ndarray", 
+  "tract",
+  "default-model",
+  "dep:ndarray",
   "dep:wasm-bindgen",
   "dep:getrandom",
   "dep:console_error_panic_hook",
-  "dep:js-sys"
+  "dep:js-sys",
 ]
 hdf5-static = ["hdf5?/static"]
 
@@ -126,8 +126,8 @@ tract-pulse = { version = "^0.21.0", optional = true }
 tract-hir = { version = "^0.21.0", optional = true }
 flate2 = { version = "1.0.24", optional = true }
 tar = { version = "0.4.38", optional = true }
-wasm-bindgen = { version = "0.2.87", optional = true}
-getrandom = { version = "0.2", features = ["js"], optional = true}
+wasm-bindgen = { version = "0.2.87", optional = true }
+getrandom = { version = "0.2", features = ["js"], optional = true }
 console_error_panic_hook = { version = "0.1.1", optional = true }
 js-sys = { version = "0.3", optional = true }
 
