--- a/pyDF-data/pyproject.toml
+++ b/pyDF-data/pyproject.toml
@@ -1,14 +1,12 @@
 [project]
 name = "DeepFilterDataLoader"
 version = "0.5.7-pre"
-classifiers = [
-    "Programming Language :: Rust"
-]
+classifiers = ["Programming Language :: Rust"]
 requires-python = ">=3.8"
 dependencies = ["numpy >= 1.22"]
 
 [build-system]
-requires = ["maturin~=1.3"]
+requires = ["maturin>=1.3,<1.5"]
 build-backend = "maturin"
 
 [tool.maturin]
