ladspa: Fix channel in mono example

--- a/ladspa/filter-chain-configs/deepfilter-mono-source.conf
+++ b/ladspa/filter-chain-configs/deepfilter-mono-source.conf
@@ -41,7 +41,7 @@ context.modules = [
                 ]
             }
             audio.rate = 48000
-            audio.position = [FL]
+            audio.position = [MONO]
             capture.props = {
                 node.passive = true
             }
